fixed misaligned tab_img in mobile view

--- a/index.css
+++ b/index.css
@@ -1112,7 +1112,7 @@ a {
       left: 0;
       position: absolute;
       transform: translate( calc( -2.5% + .3em ), 0);
-      width: calc( 100% + 2.5% + .4em );
+      width: calc( 100% + 2.5% + .3em );
       height: calc( .05em + .2% );
       background: rgba(0, 50, 80, 1);
       padding-top: .45em;
@@ -1121,7 +1121,7 @@ a {
     }
 
     .tab_img {
-      right: 0;
+      right: 1rem;
       height: 100%;
       width: auto;
       max-width: 25%;
